--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,8 @@
-﻿root = true
+root = true
 
 [*]
 indent_style = space
-indent_size = 2
+indent_size = 4
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
