--- a/package.json
+++ b/package.json
@@ -1,43 +1,57 @@
 {
-  "name": "js-tdd-course",
-  "version": "0.0.1",
-  "description": "Bivlioteca cursso de JS com TDD",
-  "main": "index.js",
-  "scripts": {
-    "lint": "node_modules/.bin/eslint src/*.js",
-    "prepush": "npm run lint && npm run test:coverage",
-    "test": "node_modules/.bin/mocha --compilers js:babel-core/register tests/**/*.spec.js",
-    "test:tdd": "node_modules/.bin/mocha --compilers js:babel-core/register tests/**/*.spec.js --watch",
-    "test:coverage": "nyc npm test"
-  },
-  "nyc": {
-    "functions": 80,
-    "lines": 80,
-    "check-coverage": true,
-    "reporter": [
-      "text",
-      "html"
+    "name": "spotify-wrapper",
+    "version": "0.0.1",
+    "description": "A wrapper to work with Spotfy Web API",
+    "main": "src/index.js",
+    "scripts": {
+        "lint": "node_modules/.bin/eslint src/*.js",
+        "prepush": "npm run lint && npm run test:coverage",
+        "test": "node_modules/.bin/mocha --compilers js:babel-core/register tests/**/*.spec.js",
+        "test:tdd": "node_modules/.bin/mocha --compilers js:babel-core/register tests/**/*.spec.js --watch",
+        "test:coverage": "nyc npm test",
+        "babel": "./node_modules/.bin/babel-node examples/albums.js",
+        "clear": "rimraf lib/*",
+        "build": "npm run clear && babel --out-dir lib src",
+        "build:watch": "npm run build -- --watch",
+        "build:umd": "webpack --output-filename spotify-wrapper.umd.js",
+        "build:umd:min": "webpack --output-filename spotify-wrapper.umd.min.js -p",
+        "build:all": "npm run build && npm run build:umd && npm run build:umd:min"
+    },
+    "nyc": {
+        "functions": 80,
+        "lines": 80,
+        "check-coverage": true,
+        "reporter": [
+            "text",
+            "html"
+        ],
+        "exclude": [
+            "tests/**"
+        ]
+    },
+    "keywords": [
+        "js",
+        "tdd",
+        "library"
     ],
-    "exclude": [
-      "tests/**"
-    ]
-  },
-  "keywords": [
-    "js",
-    "tdd",
-    "library"
-  ],
-  "author": "Alex Macedo <front.coder.dev@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-preset-env": "^1.6.0",
-    "babel-register": "^6.26.0",
-    "chai": "^4.1.1",
-    "eslint": "^4.4.0",
-    "eslint-config-airbnb-base": "^11.3.1",
-    "eslint-plugin-import": "^2.7.0",
-    "husky": "^0.14.3",
-    "mocha": "^3.5.0",
-    "nyc": "^11.1.0"
-  }
+    "author": "Alex Macedo <front.coder.dev@gmail.com>",
+    "license": "MIT",
+    "devDependencies": {
+        "babel-cli": "^6.26.0",
+        "babel-loader": "^7.1.2",
+        "babel-preset-env": "^1.6.0",
+        "babel-register": "^6.26.0",
+        "chai": "^4.1.1",
+        "eslint": "^4.4.0",
+        "eslint-config-airbnb-base": "^11.3.1",
+        "eslint-plugin-import": "^2.7.0",
+        "husky": "^0.14.3",
+        "mocha": "^3.5.0",
+        "node-fetch": "^1.7.2",
+        "nyc": "^11.1.0",
+        "sinon": "^3.2.1",
+        "sinon-chai": "^2.13.0",
+        "sinon-stub-promise": "^4.0.0",
+        "webpack": "^3.5.6"
+    }
 }
