--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 ﻿language: node_js
 node_js:
-    - "7"
+  - "7"
 cache:
-    directories:
+  directories:
     "node_modules"
 
-before_sscript:
-    - npm run build:all
-
+before_script:
+  - npm run build:all
 after_success:
-    - npm run test:coverage
+  - npm run test:coverage
