--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "spotify-wrapper",
+    "name": "spotify-lib-wrapper",
     "version": "0.0.2",
     "description": "A wrapper to work with Spotfy Web API",
     "main": "lib/index.js",
